# cloudlet

./: .gitignore  Cargo.toml  Justfile  README.md
.github/workflows/: cloudlet.yml  flow_lint_rust.yml  harkness.yml  on_push_pr.yml
harkness/: Cargo.toml
harkness/src/: args.rs  main.rs
harkness/src/vmm/: Cargo.toml
harkness/src/vmm/src/: kernel.rs  lib.rs
harkness/src/vmm/src/cpu/: interrupts.rs  mod.rs  mptable.rs
proto/: agent.proto  vmm.proto
src/agent/: Cargo.toml  build.rs
src/agent/examples/: config.toml  main.rs
src/agent/src/: agent.rs  lib.rs  main.rs  rust.rs
src/agent/src/agents/: debug.rs  mod.rs  rust.rs
src/agent/src/workload/: config.rs  mod.rs  runner.rs  service.rs
src/api/: Cargo.toml  README.md
src/api/config/: config.template.yaml
src/api/src/: args.rs  client.rs  config.rs  lib.rs  main.rs  service.rs  services.rs
src/cli/: Cargo.toml
src/cli/config/: config.template.yaml  config.yaml  example.env
src/cli/examples/: config.toml  main.rs
src/cli/src/: args.rs  lib.rs  main.rs  request.rs  services.rs  types.rs  utils.rs
src/cli/src/api_client/: execute.rs  mod.rs  shutdown.rs
src/fs-gen/: Cargo.toml
src/fs-gen/resources/: initfile  registries.json
src/fs-gen/src/: cli_args.rs  errors.rs  image_builder.rs  image_loader.rs  initramfs_generator.rs  main.rs
src/fs-gen/src/loader/: download.rs  errors.rs  mod.rs  structs.rs  utils.rs
src/proto/: agent.proto
src/serverless_protocol/: Cargo.toml  README.md
src/serverless_protocol/examples/: serverless_protocol_example.rs
src/serverless_protocol/src/: lib.rs  messages.rs
src/shared-models/: Cargo.toml
src/shared-models/src/: lib.rs
src/vmm/: Cargo.toml  build.rs
src/vmm/src/: args.rs  lib.rs  main.rs  service.rs
src/vmm/src/core/: epoll_context.rs  irq_allocator.rs  kernel.rs  mod.rs  slip_pty.rs  vmm.rs
src/vmm/src/core/cpu/: gdt.rs  mod.rs  mpspec.rs  mptable.rs  msrs.rs
src/vmm/src/core/devices/: mod.rs  serial.rs
src/vmm/src/core/devices/virtio/: mod.rs  register.rs
src/vmm/src/core/devices/virtio/net/: bridge.rs  device.rs  iptables.rs  mod.rs  queue_handler.rs  simple_handler.rs
src/vmm/src/core/devices/virtio/net/tuntap/: mac.rs  open_tap.rs  tap.rs
src/vmm/src/core/devices/virtio/net/tuntap/net_gen/: inn.rs  mod.rs
src/vmm/src/core/network/: mod.rs  open_tap.rs  tap.rs
src/vmm/src/core/network/net_gen/: if_tun.rs  iff.rs  sockios.rs
src/vmm/src/grpc/: client.rs  server.rs
tools/: .gitignore
tools/kernel/: linux-config-x86_64  mkkernel.sh
tools/rootfs/: config.toml  mkrootfs.sh
