[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[lib]
name = "agent"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
prost = "0.12.4"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"
tonic = "0.11"

[build-dependencies]
tonic-build = "0.11"

[features]
debug-agent = []

