[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
serde = "1.0.197"
tonic = "0.9"
prost = "0.11"
shared_models = { path="../shared-models" }
tokio = { version= "1.37.0", features= ["full"]}
tokio-stream = "0.1.15"
actix-web-lab = "0.20"
async-stream = "0.3"
serde_json = "1.0"

[build-dependencies]
tonic-build = "0.9"
