[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
serde = "1.0.197"
clap = { version = "4.5.3", features = ["derive"] }
tonic = "0.9"
prost = "0.11"
shared_models = { path="../shared-models" }
serde_yaml = "0.9.34"
tracing = "0.1.40"

[build-dependencies]
tonic-build = "0.9"
