[package]
name = "fs-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive", "wrap_help", "string"] }
once_cell = "1.19.0"
regex = "1.10.4"
validator = { version = "0.17.0", features = ["derive"] }
