[package]
name = "fs-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive", "wrap_help", "string"] }
dircpy = "0.3.16"
fuse-backend-rs = "0.12.0"
flate2 = "1.0.28"
once_cell = "1.19.0"
regex = "1.10.4"
reqwest = { version = "0.12.3", features = ["blocking", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
signal-hook = "0.3.17"
tar = "0.4.40"
validator = { version = "0.17.0", features = ["derive"] }
anyhow = "1.0.82"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
