[package]
name = "serverless_protocol"
version = "0.1.0"
edition = "2021"

[lib]
name = "serverless_protocol"

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serialport = "4.3.0"

[dev-dependencies]
clap = { version = "4.5.2", features = ["derive"] }

[[example]]
name = "serverless_protocol_example"
path = "examples/serverless_protocol_example.rs"
