[package]
name = "vmm"
description = "The Virtual Machine Manager for the Cloudlet serverless runtime"
authors = ["Polytech Montpellier DevOps - 2022/2025"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/virt-do/cloudlet"
version = "0.1.0"
edition = "2021"
rust-version = "1.76.0"

[dependencies]
clap = { version = "4.5.1", features = ["derive", "env"] }
clap-verbosity-flag = "2.2.0"
epoll = "4.3.3"
event-manager = { version = "0.4.0", features = ["remote_endpoint"] }
kvm-bindings = { version = "0.7.0", features = ["fam-wrappers"] }
kvm-ioctls = "0.16.0"
libc = "0.2.153"
linux-loader = { version = "0.11.0", features = ["bzimage", "elf"] }
log = "0.4.20"
nix = { version = "0.28.0", features = ["term"] }
openpty = "0.2.0"
prost = "0.11"
tokio = { version = "1.37.0", features = ["full"] }
tonic = "0.9"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
virtio-bindings = "0.2.2"
virtio-device = { git = "https://github.com/rust-vmm/vm-virtio.git" }
virtio-queue = { git = "https://github.com/rust-vmm/vm-virtio.git" }
vm-allocator = "0.1.0"
vm-device = "0.1.0"
vm-memory = { version = "0.14.1", features = ["backend-mmap"] }
vm-superio = "0.7.0"
vmm-sys-util = "0.12.1"
tokio-stream = "0.1.15"

[build-dependencies]
tonic-build = "0.9"
