[package]
name = "harkness-vmm"
description = "The VMM implementation for the Harkness serverless runtime"
authors = ["Polytech Montpellier DevOps - 2022/2025"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/virt-do/project-2024"
version = "0.1.0"
edition = "2021"
rust-version = "1.76.0"

[dependencies]
epoll = "4.3.3"
kvm-bindings = { version = "0.7.0", features = ["fam-wrappers"] }
kvm-ioctls = "0.16.0"
libc = "0.2.153"
linux-loader = { version = "0.11.0", features = ["bzimage", "elf"] }
tracing = "0.1.40"
vm-device = "0.1.0"
vm-memory = { version = "0.14.0", features = ["backend-mmap"] }
vm-superio = "0.7.0"
vmm-sys-util = "0.12.1"
